# dexi_offboard

./: CMakeLists.txt  README.md  package.xml
examples/: README.md
examples/cli/: basic_flight.sh  manual_commands.sh  teleop_test.sh
examples/javascript/: droneblocks_box_mission.html
examples/python/: droneblocks_box_mission.py  droneblocks_circle_mission.py  figure_eight_pattern.py  position_circle_orbit.py  position_square.py  simple_flight.py  square_pattern.py  takeoff_diagnostics.py  velocity_circle.py  velocity_control_demo.py  velocity_figure_eight.py
include/dexi_offboard/: apriltag_follower.hpp  apriltag_visualizer.hpp  keyboard_teleop.hpp  mission_controller.hpp  px4_offboard_manager.hpp  px4_pose_publisher.hpp
launch/: apriltag_follow.launch.py  offboard_sitl.launch.py  offboard_with_visualization.launch.py  px4_offboard_manager.launch.py  teleop_control.launch.py
rviz/: dexi_visualization.rviz
src/: apriltag_follower.cpp  apriltag_visualizer.cpp  keyboard_teleop.cpp  mission_controller.cpp  px4_offboard_manager.cpp  px4_pose_publisher.cpp
